--- a/app/src/main/res/layout/list_result_activity.xml
+++ b/app/src/main/res/layout/list_result_activity.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/areaItemListViewStorage"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:weightSum="3"
-    android:padding="5dp">
+    android:orientation="vertical"
+    android:padding="5dp"
+    android:weightSum="3">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp">
 
         <TextView
             android:id="@+id/dateTextView"
@@ -18,39 +22,67 @@
             android:layout_height="30dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:weightSum="1"
-            android:textSize="18sp" />
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/myTextListColor"
+            android:textSize="18sp"
+            android:weightSum="1" />
 
-        <TextView
-            android:id="@+id/directionTextView"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginStart="8dp"
-            android:weightSum="1"
-            android:textSize="18sp"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="1">
+            android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/rttButton"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="260dp"
-                android:layout_marginBottom="8dp"
+                android:id="@+id/goAheadStorage"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_go_ahead"
+                android:backgroundTint="@color/myPrimaryColor"
+                android:elevation="0dp"
                 android:focusable="false"
-                android:padding="10sp" />
+                android:padding="10sp"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/bandwidthButton"
-                android:layout_width="120dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="20dp"
-                android:focusable="false"
-                android:padding="10sp"/>
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/typeOfTest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="sans-serif-thin"
+                android:textColor="@color/myTextListColor"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@+id/directionTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/directionTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="sans-serif-thin"
+                android:textColor="@color/myTextListColor"
+                android:textSize="18sp"
+                android:weightSum="1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline20"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="281dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
+
 </RelativeLayout>
