--- a/app/src/main/res/layout/list_single_textview.xml
+++ b/app/src/main/res/layout/list_single_textview.xml
@@ -14,8 +14,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:textSize="20sp"
+        android:fontFamily="sans-serif-thin"
         android:textAlignment="center"
+        android:textColor="#002047"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
