--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,18 +1,14 @@
 <resources>
     <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
-    </string-array>
-
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
-    </string-array>
 
     <string-array name="function_array">
-        <item>Sender</item>
         <item>Receiver</item>
+        <item>Sender</item>
+    </string-array>
+
+    <string-array name="function_array_value">
+        <item>0</item>
+        <item>1</item>
     </string-array>
 
 </resources>
