--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#0079A8</color>
+    <color name="colorAccent">#263BA6</color>
+    <color name="transparent">#00E3DEE4</color>
+    <color name="start_test_btn_pressed_color">#3C00DDFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="backgroundApp">#FFFFFF</color>
+    <color name="backgroundApp2">#080911</color>
+    <color name="myPrimaryColor">#F34C8B</color>
+    <color name="mySecondaryColor">#FF28F5</color>
+    <color name="myTertiaryColor">#E600FF</color>
+    <color name="myTextPreferenceColor">#87264B</color>
+    <color name="myTextListColor">#000000</color>
+
+
 </resources>
